[tool.poetry]
name = "fastapi_app"
version = "0.1.0"
description = "Example app using FastAPI, asyncio, SQLModel, Celery, Alembic and Supertokens"
authors = ["Petr Gazarov <petrgazarov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "~0.95"
uvicorn = "~0.28"
more_itertools = "*"
sqlmodel = "0.0.8"
pydantic = "<2.0"
toolz = "~0.12"
genson = "~1.2"
asyncpg = "~0.29"
greenlet = "~3.0"
alembic = "~1.10"
rich = "~13.7"
supertokens-python = "~0.12"
requests = "~2.31"
boto3 = "~1.34"
celery = { extras = ["sqs"], version = "~5.2" }
psycopg2 = "^2.9.9"

[tool.poetry.dev-dependencies]
mypy = "~1.2"
python-dotenv = "~1.0"
black = "~24.2"
types-requests = "~2.31"
types-PyMySQL = "~1.1"
types-Pygments = "~2.17"
types-psycopg2 = "~2.9"
types-python-dateutil = "~2.8"
types-ujson = "~5.9"
boto3-stubs = { extras = ["s3"], version = "~1.34" }
pre-commit = "~3.5"
